# Sprocket-Pan

./: .eslintignore  .eslintrc.cjs  .gitignore  .prettierrc.cjs  LICENSE  README.md  index.html  package.json  splashscreen.html  tsconfig.json  vite.config.ts
.github/workflows/: prerelease.yml  release.yml
patches/: vite-plugin-eslint+1.8.1.dev.patch
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: close_splashscreen.rs  mod.rs  show_in_explorer.rs  zoom.rs
src/classes/: OrderedKeyValuePairs.ts
src/components/: MonacoListener.tsx
src/components/SettingsPanel/: DataTab.tsx  GeneralTab.tsx  RequestsTab.tsx  ScriptChips.tsx  SettingsPanel.tsx
src/components/atoms/: EditableText.tsx  EditableTextArea.tsx  EditableTitle.tsx  FloatingLabelTextArea.tsx  SearchInputField.tsx  SprocketTooltip.tsx
src/components/header/: Tab.tsx  TabHeader.tsx  TabRow.tsx  UndoRedoTabsButton.tsx
src/components/molecules/: EndpointFileSystem.tsx  NavigableServicesFileSystem.tsx  QueueModals.tsx  RequestFileSystem.tsx  ServiceFileSystem.tsx  SideDrawer.tsx  (+2 more)
src/constants/: components.tsx  constants.ts  defaults.ts  request.ts  statusCodes.ts  style.ts  uiElementIds.ts
src/hooks/: useClickOutsideAlerter.ts  useComponentIdentifier.ts  useComputedEnvironment.ts  useDebounce.ts  useEditorTheme.ts  useFileSystemSynchronization.ts  useHorizontalScroll.tsx  useParticleThemeColor.ts  useScrollbarTheme.ts  useShowSync.ts  useSingleAxisScroll.tsx  useWorkspaceFileSystemSynchronization.ts
src/managers/: ApplicationDataManager.ts  AuditLogManager.ts  EnvironmentContextResolver.ts  EnvironmentContextResolver.tsx  FileSystemManager.ts  GlobalContextManager.ts  MonacoInitManager.ts  NetworkRequestManager.ts  SaveUpdateManager.ts  ScriptInjectionManager.ts  ScriptRunnerManager.ts  SecretsContextResolver.ts  ShortcutManager.ts  SwaggerParseManager.tsx  TabsManager.ts  WorkspaceDataManager.ts
src/state/: store.ts  types.ts
src/styles/: list.ts  text.ts
src/utils/: application.ts  constants.ts  conversion.ts  data-utils.ts  functions.ts  getters.ts  invoke.ts  json-parse.ts  logging.ts  math.ts  misc.ts  object.ts  pollyfill.ts  search.ts  serialization.ts  string.ts  style.ts  types.ts  variables.ts
(+266 files in other folders)
