[package]
name = "sprocket_pan"
version = "1.0.0"
description = "Sprocket Pan"
authors = ["Itai Fish"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [
	"http-all",
	"dialog-all",
	"os-all",
	"path-all",
	"fs-all",
	"shell-open",
	# "devtools", // enable devtools for the console in prod
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
log = "^0.4"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
webkit2gtk = { version = "^0.18.2" }
objc = "0.2.7"
[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
